; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/binutils/gas/extr_dw2gencfi.c_cfi_new_fde.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/binutils/gas/extr_dw2gencfi.c_cfi_new_fde.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { %struct.TYPE_3__* }
%struct.TYPE_3__ = type { i32* }
%struct.fde_entry = type { i32* }

@frchain_now = common dso_local global %struct.TYPE_4__* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @cfi_new_fde(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca %struct.fde_entry*, align 8
  store i32* %0, i32** %2, align 8
  %4 = call %struct.fde_entry* (...) @alloc_fde_entry()
  store %struct.fde_entry* %4, %struct.fde_entry** %3, align 8
  %5 = load i32*, i32** %2, align 8
  %6 = load %struct.fde_entry*, %struct.fde_entry** %3, align 8
  %7 = getelementptr inbounds %struct.fde_entry, %struct.fde_entry* %6, i32 0, i32 0
  store i32* %5, i32** %7, align 8
  %8 = load i32*, i32** %2, align 8
  %9 = load %struct.TYPE_4__*, %struct.TYPE_4__** @frchain_now, align 8
  %10 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %9, i32 0, i32 0
  %11 = load %struct.TYPE_3__*, %struct.TYPE_3__** %10, align 8
  %12 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %11, i32 0, i32 0
  store i32* %8, i32** %12, align 8
  ret void
}

declare dso_local %struct.fde_entry* @alloc_fde_entry(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
